--- a/Vocable/Features/Settings/EditCategories/EditCategories.storyboard
+++ b/Vocable/Features/Settings/EditCategories/EditCategories.storyboard
@@ -174,6 +174,7 @@
                     <connections>
                         <outlet property="addCategoryButton" destination="y3d-hd-xdZ" id="ReU-nG-jLK"/>
                         <outlet property="pageNavigationView" destination="xsL-XA-YD7" id="Se5-DF-Fqu"/>
+                        <outlet property="titleLabel" destination="0CD-i2-i5g" id="SCr-IZ-Tw8"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gxk-ad-LrW" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
