--- a/Vocable/Common/EditTextViewController.storyboard
+++ b/Vocable/Common/EditTextViewController.storyboard
@@ -17,8 +17,11 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="jeD-rZ-8vo">
-                                <rect key="frame" x="20" y="52" width="374" height="802"/>
+                                <rect key="frame" x="20" y="52" width="374" height="187"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="187" id="Hec-vV-iyz"/>
+                                </constraints>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="vg8-ax-ykK">
                                     <size key="itemSize" width="50" height="50"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -30,13 +33,22 @@
                                     <outlet property="delegate" destination="ZB6-EJ-tYc" id="bK0-fo-99z"/>
                                 </connections>
                             </collectionView>
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bLQ-mV-ndZ">
+                                <rect key="frame" x="20" y="247" width="374" height="607"/>
+                                <connections>
+                                    <segue destination="buC-Fg-3oO" kind="embed" identifier="KeyboardViewController" id="3ai-RN-gwb"/>
+                                </connections>
+                            </containerView>
                         </subviews>
                         <color key="backgroundColor" name="Background"/>
                         <constraints>
+                            <constraint firstItem="bLQ-mV-ndZ" firstAttribute="leading" secondItem="9aE-1M-ruh" secondAttribute="leadingMargin" id="Bfw-Gk-5FD"/>
                             <constraint firstItem="jeD-rZ-8vo" firstAttribute="top" secondItem="9aE-1M-ruh" secondAttribute="topMargin" id="DFj-id-bDw"/>
-                            <constraint firstItem="jeD-rZ-8vo" firstAttribute="bottom" secondItem="9aE-1M-ruh" secondAttribute="bottomMargin" id="WbV-Bz-We5"/>
+                            <constraint firstItem="bLQ-mV-ndZ" firstAttribute="top" secondItem="jeD-rZ-8vo" secondAttribute="bottom" constant="8" id="YoU-Ze-XnP"/>
                             <constraint firstItem="jeD-rZ-8vo" firstAttribute="leading" secondItem="9aE-1M-ruh" secondAttribute="leadingMargin" id="dUg-0c-0uk"/>
                             <constraint firstItem="jeD-rZ-8vo" firstAttribute="trailing" secondItem="9aE-1M-ruh" secondAttribute="trailingMargin" id="w9A-B4-5Cb"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="bLQ-mV-ndZ" secondAttribute="trailing" id="wax-MO-FxS"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="bLQ-mV-ndZ" secondAttribute="bottom" id="xZy-eN-2s1"/>
                         </constraints>
                         <edgeInsets key="layoutMargins" top="32" left="32" bottom="32" right="32"/>
                         <viewLayoutGuide key="safeArea" id="C4b-jp-Pwl"/>
@@ -53,7 +65,32 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pn3-wh-Ye0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4778" y="138"/>
+            <point key="canvasLocation" x="4776.811594202899" y="137.94642857142856"/>
+        </scene>
+        <!--Keyboard View Controller-->
+        <scene sceneID="hKx-Ue-f6h">
+            <objects>
+                <collectionViewController id="buC-Fg-3oO" customClass="KeyboardViewController" customModule="Vocable" customModuleProvider="target" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="aX5-fP-mq4">
+                        <rect key="frame" x="0.0" y="0.0" width="374" height="607"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Xyz-Bm-YHL">
+                            <size key="itemSize" width="128" height="128"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells/>
+                        <connections>
+                            <outlet property="dataSource" destination="buC-Fg-3oO" id="wxJ-WD-cRb"/>
+                            <outlet property="delegate" destination="buC-Fg-3oO" id="rMm-Pf-n42"/>
+                        </connections>
+                    </collectionView>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="pZn-t8-dKd" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="5600" y="138"/>
         </scene>
     </scenes>
     <resources>
